--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ torch>=2.0.0
 transformers>=4.30.0
 datasets>=2.12.0
 accelerate>=0.20.0
-bitsandbytes-windows==0.37.5
+bitsandbytes>=0.41.0
 peft>=0.4.0
 pytorch-lightning>=2.0.0
 gradio>=3.40.0
