--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 torch>=2.0.0
-transformers>=4.30.0
-datasets>=2.12.0
-accelerate>=0.20.0
-bitsandbytes>=0.41.0
-peft>=0.4.0
-pytorch-lightning>=2.0.0
-gradio>=3.40.0
-wandb>=0.15.0
-rich>=13.0.0
+transformers>=4.36.0
+datasets>=2.14.0
+accelerate>=0.25.0
+peft>=0.7.0
+trl>=0.7.4
+wandb>=0.16.0
+gradio>=4.0.0
+rich>=13.7.0
+numpy>=1.24.0
+tqdm>=4.66.0
+scipy>=1.11.0
 sentencepiece>=0.1.99
 protobuf>=4.23.0 
